# DVR

./: .gitignore  README.md  pyproject.toml
dvr/: __init__.py
examples/: 1d_example.py  2d_example.py  benchmark.py
